# CivilBot

./: app.py  asdffds  calculators.py  civil_ai.py  forms.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py
__pycache__/attached_assets/: Pasted-You-are-an-expert-Python-developer-Build-a-complete-AI-web-app-in-Python-Flask-or-FastAPI-that-he-1755690418155_1755690418155.txt
__pycache__/templates/: 404.html  calculator.html  index.html  safety.html
attached_assets/: Pasted-I-want-you-to-update-my-Civil-Engineering-AI-Web-App-with-the-following-improvements-1-Civil--1755756210080_1755756210081.txt  Pasted-Update-my-project-with-the-following-changes-only-do-not-modify-or-remove-any-other-features-or-fil-1755771564651_1755771564652.txt  Pasted-You-are-an-expert-full-stack-Python-Flask-JavaScript-developer-Upgrade-my-existing-Civil-Engineer-1755696097445_1755696097446.txt  Pasted-You-are-improving-my-Civil-Engineering-AI-Web-App-Do-not-remove-existing-features-Only-fix-and-or-1755764405966_1755764405967.txt  Pasted-You-are-updating-my-Civil-Engineering-AI-Web-App-Do-not-change-the-color-theme-or-remove-existing--1755769689289_1755769689290.txt
instance/: civilbot.db
static/css/: custom.css
templates/: 500.html  about.html  account.html  base.html  calculator.html  chat.html  concrete_calculator.html  cost_calculator.html  edit_profile.html  estimation.html  index.html  knowledge_base.html  login.html  material_estimator.html  plan_reader.html  register.html  safety.html  scheduler.html  steel_calculator.html  unit_converter.html
(+3 files in other folders)
