[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "groq>=0.31.0",
    "gunicorn>=23.0.0",
    "markupsafe>=3.0.2",
    "matplotlib>=3.10.5",
    "openai>=1.100.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
]
